--- a/our-products.html
+++ b/our-products.html
@@ -11,22 +11,13 @@
     <script src="./src/index.js" defer></script>
 </head>
 <body class="page__body">
-    <header class="header">
-        <div class="header__top">
-            <img src="./images/aqua_food_logo+symbol-05.png" alt="Логотип Aqua Foods" class="header__logo" />
-            <a href="#menu" class="icon icon--menu"></a>
-        </div>
-   
     <aside class="menu" id="menu">
         <div class="menu__container">
+            <div class="menu__top">
+                <img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="menu__logo"/>
+                <a href="#" class="icon icon--close"></a> 
+            </div>
             <div class="menu__grid">
-                <div class="menu__top">
-                    <img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="menu__logo"/>
-                    <button class="menu__close" aria-label="Close menu">
-                        <span class="icon icon--close"></span>
-                    </button>
-                </div>
-    
                     <nav class="menu__nav">
                         <ul class="menu__list">
                             <li class="menu__item">
@@ -49,11 +40,19 @@
             </div>
         </div>
     </aside>
-</header> 
+     <!-- #endregion  -->
+
+     <!-- #region HEADER -->
+
+    <header class="header">
+      <div class="header__top">
+          <img src="./images/aqua_food_logo+symbol-05.png" alt="Логотип Aqua Foods" class="header__logo" />
+          <a href="#menu" class="icon icon--menu"></a>
+      </div>
     <main class="main">
         <div class="dropdown">
             <h2 class="section-title">Наша продукція</h2>
-            <h5>Категорії товарів</h5>
+            <h5 style="margin-inline: 15px">Категорії товарів</h5>
             <button class="btn custom-dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               Мінеральна вода
               <span class="dropdown-arrow"></span>
@@ -66,6 +65,7 @@
               <li><a class="dropdown-item" href="#pasta">Паста</a></li>
               <li><a class="dropdown-item" href="#can">Консерви</a></li>
               <li><a class="dropdown-item" href="#kids">Дитяче харчування</a></li>
+              <li><a class="dropdown-item" href="#souce">Соуси та заправки</a></li>
             </ul>
           </div>
           <!-- WATER -->
@@ -238,15 +238,15 @@
                 <h3 class="footer__title">Контакти</h3>
                 <div class="footer__list">
                     <a href="https://maps.google.com" class="footer__contact">
-                        <img src="./images/icons/Vector.png" alt="Location" class="footer__contact-icon service-icon">
+                        <img src="./images/icons/location.svg" alt="Location" class="footer__contact-icon service-icon">
                         місто Київ, вул. Ямська, 28
                     </a>
                     <a href="tel:+380672996564" class="footer__contact">
-                        <img src="./images/icons/phone.png" alt="Phone" class="footer__contact-icon service-icon">
+                        <img src="./images/icons/phone.svg" alt="Phone" class="footer__contact-icon service-icon">
                         +38 (067) 299 65 64
                     </a>
                     <a href="mailto:office@af.org.ua" class="footer__contact service-icon">
-                        <img src="./images/icons/envelop.png" alt="Email" class="footer__contact-icon">
+                        <img src="./images/icons/envelop.svg" alt="Email" class="footer__contact-icon">
                         office@af.org.ua
                     </a>
                 </div>
