--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                 <img src="./images/girl_warehouse.png" alt="Warehouse worker with forklift">
               </div>
               <div class="hero-text">
-                <h2 class="hero-title">Шукаєте надійного постачальника? Довірте свою логістику професіоналам!</h2>
+                <h2 class="hero-title">Шукаєте надійного постачальника? Довірте логістику професіоналам!</h2>
               </div>
             </div>
             
