--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     <aside class="menu" id="menu">
         <div class="menu__container">
             <div class="menu__top">
-                <img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="header__logo"/>
+                <a href="#"><img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="header__logo"/></a>
                 <a href="#" class="icon icon--close"></a> 
             </div>
             <div class="menu__grid">
-                <img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="menu__logo"/>
+                <a href="#"><img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="menu__logo"/></a>
                     <nav class="menu__nav">
                         <ul class="menu__list">
                             <li class="menu__item">
@@ -139,7 +139,7 @@
 
     <header class="header">
       <div class="header__top">
-          <img src="./images/aqua_food_logo+symbol-05.png" alt="Логотип Aqua Foods" class="header__logo" />
+        <a href="#"><img src="./images/aqua_food_logo+symbol-05.png" alt="Логотип Aqua Foods" class="header__logo" /></a>
           <a href="#menu" class="icon icon--menu"></a>
       </div>
     <div class="container__grid">
@@ -270,7 +270,7 @@
                         <img src="./images/icons/arrow_right.svg" alt="Explore more" class="service-icon">
                     </div>
                 </div>
-                <div class="product-card" onclick="redirectToAppetizers()">
+                <div class="product-card" >
                     <img src="./images/OurProductsimages/снеки1.png" alt="Snacks" class="product-image">
                     <div class="divider-line"></div>
                     <div class="wrap">
