--- a/our-products.html
+++ b/our-products.html
@@ -14,10 +14,11 @@
     <aside class="menu" id="menu">
         <div class="menu__container">
             <div class="menu__top">
-                <img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="menu__logo"/>
+                <a href="./index.html"><img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="menu__logo"/></a>
                 <a href="#" class="icon icon--close"></a> 
             </div>
             <div class="menu__grid">
+                <a href="./index.html"><img src="./images/aqua_food_logo+symbol-05.png" alt="aqua_food" class="menu__logo"/></a>
                     <nav class="menu__nav">
                         <ul class="menu__list">
                             <li class="menu__item">
@@ -46,7 +47,7 @@
 
     <header class="header">
       <div class="header__top">
-          <img src="./images/aqua_food_logo+symbol-05.png" alt="Логотип Aqua Foods" class="header__logo" />
+        <a href="./index.html"><img src="./images/aqua_food_logo+symbol-05.png" alt="Логотип Aqua Foods" class="header__logo" /></a>
           <a href="#menu" class="icon icon--menu"></a>
       </div>
     <main class="main">
