--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
                         <img src="./images/icons/arrow_right.svg" alt="Explore more" class="service-icon">
                     </div>
                 </div>
-                <div class="product-card" onclick="redirectToSyrop()" style="padding: 1px;">
+                <div class="product-card" onclick="redirectToSyrop()" style="padding-inline: 1px;">
                     <img src="./images/OurProductsimages/сиропы.png" alt="Syrups" class="product-image"">
-                    <div class="divider-line"></div>
+                    <div class="divider-line" ></div>
                     <div class="wrap">
                         <h3 class="product-title">Сиропи</h3>
                         <img src="./images/icons/arrow_right.svg" alt="Explore more" class="service-icon">
@@ -302,7 +302,7 @@
                         <img src="./images/icons/arrow_right.svg" alt="Explore more" class="service-icon">
                     </div>
                 </div>
-                <div class="product-card" onclick="redirectToCan()" style="padding: 1px;">
+                <div class="product-card" onclick="redirectToCan()" style="padding-inline: 1px;">
                     <img src="./images/OurProductsimages/консерви1.png" alt="Food products" class="product-image">
                     <div class="divider-line"></div>
                     <div class="wrap">
@@ -310,7 +310,7 @@
                         <img src="./images/icons/arrow_right.svg" alt="Explore more" class="service-icon">
                     </div>
                 </div>
-                <div class="product-card" onclick="redirectToKids()" style="padding: 1px;">
+                <div class="product-card" onclick="redirectToKids()" style="padding-inline: 1px;">
                     <img src="./images/OurProductsimages/дитячехарчування1.png" alt="Food products" class="product-image" style="transform: scale(1);">
                     <div class="divider-line"></div>
                     <div class="wrap">
